# routes/api.php
@@ -4,6 +4,7 @@ use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\AssetSummaryController;
 use App\Http\Controllers\Api\AttendanceController;
 use App\Http\Controllers\Api\EmployeeController;
+use App\Http\Controllers\Api\IngredientImportController;
 use App\Http\Controllers\Api\IngredientStockController;
 use App\Http\Controllers\Api\Payments\BniQrisDevelopmentController;
 use App\Http\Controllers\Api\Payments\BniQrisWebhookController;
@@ -81,6 +82,9 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::apiResource('tables', TableController::class);
     Route::get('stock-report', [StockReportController::class, 'index']);
     Route::get('ingredient-stock', [IngredientStockController::class, 'index']);
+    Route::get('ingredients/import-template', [IngredientImportController::class, 'template']);
+    Route::get('ingredients/import-template.xlsx', [IngredientImportController::class, 'templateExcel']);
+    Route::post('ingredients/import', [IngredientImportController::class, 'store']);
     Route::get('stock-transactions', [StockTransactionController::class, 'index']);
     Route::post('stock-transactions', [StockTransactionController::class, 'store']);
     Route::apiResource('suppliers', SupplierController::class);
